--- a/docs/1.使用指南.md
+++ b/docs/1.使用指南.md
@@ -1,9 +1,9 @@
 # 1. 使用指南
 
-2.0.0 版本 :arrow_up: (简单的代码示例：https://github.com/cdcd72/NetCore.AspectCore.AOP.Demo)
-2.0.0 版本 :arrow_down: (简单的代码示例：https://github.com/fs7744/AspectCoreDemo)
+2.0.0 版本 :arrow_up: (简单的代码示例：https://github.com/cdcd72/NetCore.AspectCore.AOP.Demo)  
+2.0.0 版本 :arrow_down: (简单的代码示例：https://github.com/fs7744/AspectCoreDemo)  
 
-* 开始使用AspectCore
+## 开始使用AspectCore
 
 * 启动 Visual Studio。从 File 菜单, 选择 New > Project。选择 ASP.NET Core Web Application 项目模版，创建新的 ASP.NET Core Web Application 项目。
 
@@ -88,9 +88,8 @@
                 .UseServiceProviderFactory(new DynamicProxyServiceProviderFactory());
     ```
 ---
-* 拦截器配置。
-
-    全局拦截器。使用`ConfigureDynamicProxy(Action<IAspectConfiguration>)`的重载方法，其中`IAspectConfiguration`提供`Interceptors`注册全局拦截器:
+## 拦截器配置
+* 全局拦截器。使用`ConfigureDynamicProxy(Action<IAspectConfiguration>)`的重载方法，其中`IAspectConfiguration`提供`Interceptors`注册全局拦截器:
     ``` csharp
     services.ConfigureDynamicProxy(config =>
     {
@@ -237,5 +236,5 @@
     }
     ```
 
-2.0.0 版本 :arrow_up: ps : 原文(https://www.thinkinmd.com/post/2020/03/20/use-aspectcore-to-implement-aop-mechanism/)
-2.0.0 版本 :arrow_down: ps : 原文(http://www.cnblogs.com/liuhaoyang/p/aspectcore-introduction-1.html)
+2.0.0 版本 :arrow_up: ps : 原文(https://www.thinkinmd.com/post/2020/03/20/use-aspectcore-to-implement-aop-mechanism/)  
+2.0.0 版本 :arrow_down: ps : 原文(http://www.cnblogs.com/liuhaoyang/p/aspectcore-introduction-1.html)  
