--- a/docs/0.AOP简单介绍.md
+++ b/docs/0.AOP简单介绍.md
@@ -41,7 +41,7 @@ AOP 实现会采用一些常见方法：
 
     dotnet 框架代表： [PostSharp](https://www.postsharp.net/aop.net)
 
-* 代码拦截，或者叫 动态代理
+* 代码拦截，或者叫 动态代理、动态编织、代码劫持
 
     在运行时在内存中“临时”生成 AOP 动态代理类，因此也被称为运行时增强或动态代理。
 
